--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </section>
       <section class="p-4 explore text-center col-lg-3 col-md-4 d-flex justify-content-center align-items-center">
         <div class="text-black text-uppercase d-flex justify-content-center align-items-center fs-1 ">
-          Discover
+          explore
         </div>
       </section>
     </main>
