--- a/crew-commander.html
+++ b/crew-commander.html
@@ -1,27 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+  <link rel="stylesheet" href="css/style.css">
+  <!-- bootstrap css cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <!-- for font awsome icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&amp;family=Bellefair&amp;family=Barlow:wght@400;700&amp;display=swap"
+    rel="stylesheet" />
+  <!-- Google Fonts -->
   <title>Frontend Mentor | Space tourism website</title>
+  <style>
+    body {
+      font-family: "Barlow Condensed", sans-serif;
+    }
+
+    @media (max-width: 991px) {
+      body {
+        background-image: url('./assets/crew/background-crew-tablet.jpg') !important;
+        background-size: cover !important;
+      }
+    }
+
+
+    @media (max-width: 667px) {
+      body {
+        background-image: url('./assets/crew/background-crew-mobile.jpg') !important;
+        background-size: cover !important;
+      }
+    }
+  </style>
 </head>
-<body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<body style="background-image: url(assets/crew/background-crew-desktop.jpg);">
+  <!-- Start Header Section -->
+  <header>
+    <nav class="navbar navbar-expand-sm mt-4 ">
+      <div class="container-fluid d-flex justify-content-between ps-5 pe-5">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/shared/logo.svg" alt="loge">
+        </a>
+        <button class="navbar-toggler bg-white" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon d-block"></span>
+        </button>
+        <div class="offcanvas w-50 offcanvas-end d-flex justify-content-between align-items-end" tabindex="-1"
+          id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header w-100">
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="collapse navbar-collapse flex-grow-0 p-2 text-center position-relative" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav" style="--bs-scroll-height: 400px">
+              <li class="nav-item text-capitalize">
+                <a class="nav-link  text-white" aria-current="page" href="index.html">00 Home</a>
+              </li>
+              <li class="nav-item text-capitalize">
+                <a class="nav-link text-white" href="destination-moon.html">01 Destination</a>
+              </li>
+              <li class="nav-item text-capitalize text-white">
+                <a class="nav-link text-white active" href="crew-commander.html">02 Crew</a>
+              </li>
+              <li class="nav-item text-capitalize text-white">
+                <a class="nav-link text-white" href="technology-capsule.html">03 technology</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+    <!-- ////////////////////////////////////////////////// -->
 
-  02 Meet your crew
-
-  Commander
-  Douglas Hurley
-
-  Douglas Gerald Hurley is an American engineer, former Marine Corps pilot 
-  and former NASA astronaut. He launched into space for the third time as 
-  commander of Crew Dragon Demo-2.
+  </header>
+  <!-- End Header Section -->
+  <!-- Start Main Content -->
+  <div class="container content">
+    <main class="row justify-content-center d-flex justify-content-center align-items-center flex-wrap gap-4 crew">
+      <section class=" crew p-4 space d-flex flex-wrap justify-content-flex-start align-items-center">
+        <h3 class="text-white mb-5" style="text-transform: uppercase;">
+          02 Meet your crew
+        </h3>
+        <h4 class=" w-100 m-0 mb-3 fs-3 crew-role" style="text-transform:uppercase; color:#cccccc55"></h4>
+        <p class=" text-white w-100 crew-name" style="font-size:3rem; text-transform:uppercase"></p>
+        <p class="text-white w-100 fs-5 pb-3 crew-bio"></p>
+        <ul class="d-flex justify-content-flex-start align-items-center p-0 " style="width:75%; ">
+          <li><a
+              style="text-decoration: none; text-transform:capitalize; background:#cccccc55; border-radius:50%; width:20px; height:20px "
+              class="text-white fs-4 active-1 d-block ms-4 one"></a>
+          </li>
+          <li><a
+              style="text-decoration: none; text-transform:capitalize; background:#cccccc55; border-radius:50%; width:20px; height:20px"
+              class="text-white fs-4 d-block ms-4 two"></a>
+          </li>
+          <li><a
+              style="text-decoration: none; text-transform:capitalize;background:#cccccc55; border-radius:50%; width:20px; height:20px "
+              class="text-white fs-4 d-block ms-4 three"></a>
+          </li>
+          <li><a
+              style="text-decoration: none; text-transform:capitalize;background:#cccccc55; border-radius:50%; width:20px; height:20px "
+              class="text-white fs-4 d-block ms-4 four"></a>
+          </li>
+        </ul>
+      </section>
+      <section class="" style="width: 50%;">
+        <img class="mw-100 crew-img" src="" alt="moon" id="crewImg">
+      </section>
+    </main>
+  </div>
+  <!-- End Main Content -->
+  <script src="js/mainTwo.js"></script>
+  <!-- bootstrap js cdn -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
