--- a/destination-moon.html
+++ b/destination-moon.html
@@ -1,37 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- bootstrap css cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <!-- for font awsome icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&amp;family=Bellefair&amp;family=Barlow:wght@400;700&amp;display=swap"
+    rel="stylesheet" />
+  <!-- Google Fonts -->
   <title>Frontend Mentor | Space tourism website</title>
+  <style>
+    body {
+      font-family: "Barlow Condensed", sans-serif;
+    }
+
+    @media (max-width: 991px) {
+      body {
+        background-image: url('./assets/destination/background-destination-tablet.jpg');
+        background-size: cover;
+      }
+    }
+
+
+    @media (max-width: 667px) {
+      body {
+        background-image: url('./assets/destination/background-destination-mobile.jpg');
+        background-size: cover;
+      }
+    }
+  </style>
 </head>
-<body>
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+<body style='
+      background-image: url(assets/destination/background-destination-desktop.jpg);
+    '>
+  <!-- Start Header Section -->
+  <header>
+    <nav class=" navbar navbar-expand-sm mt-4 ">
+      <div class=" container-fluid d-flex justify-content-between ps-5 pe-5">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/shared/logo.svg" alt="loge">
+        </a>
+        <button class="navbar-toggler bg-white" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon d-block"></span>
+        </button>
+        <div class="offcanvas w-50 offcanvas-end d-flex justify-content-between align-items-end" tabindex="-1"
+          id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header w-100">
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="collapse navbar-collapse flex-grow-0 p-2 text-center position-relative" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav" style="--bs-scroll-height: 100px">
+              <li class="nav-item text-capitalize">
+                <a class="nav-link text-white" aria-current="page" href="index.html">00 Home</a>
+              </li>
+              <li class="nav-item text-capitalize">
+                <a class="nav-link text-white active" href="destination-moon.html">01 Destination</a>
+              </li>
+              <li class="nav-item text-capitalize text-white">
+                <a class="nav-link text-white" href="crew-commander.html">02 Crew</a>
+              </li>
+              <li class="nav-item text-capitalize text-white">
+                <a class="nav-link text-white" href="technology-capsule.html">03 technology</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+    <!-- ////////////////////////////////////////////////// -->
 
-  01 Pick your destination
-
-  Moon
-  Mars
-  Europa
-  Titan
-
-  Moon
-
-  See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
-  regain perspective and come back refreshed. While you’re there, take in some history 
-  by visiting the Luna 2 and Apollo 11 landing sites.
-
-  Avg. distance
-  384,400 km
-
-  Est. travel time
-  3 days
+  </header>
+  <!-- End Header Section -->
+  <!-- Start Main Content -->
+  <div class="container content">
+    <main class="row justify-content-center d-flex justify-content-center align-items-center flex-wrap gap-2">
+      <section class=" moon p-4 space d-flex flex-wrap justify-content-center align-items-center">
+        <h3 class="text-white mb-5">
+          01 Pick Your Destination
+        </h3>
+        <img class="mw-100 moon-img" src="" alt="moon" id="moonImg">
+      </section>
+      <section class="" style="width: 50%;">
+        <ul class="d-flex justify-content-between align-items-center p-0 " style="width:75%; ">
+          <li><a style="text-decoration: none; text-transform:capitalize; " class="text-white fs-4 active">moon</a>
+          </li>
+          <li><a style="text-decoration: none; text-transform:capitalize " class="text-white fs-4">mars</a>
+          </li>
+          <li><a style="text-decoration: none; text-transform:capitalize " class="text-white fs-4">europa</a>
+          </li>
+          <li><a style="text-decoration: none; text-transform:capitalize " class="text-white fs-4">titan</a>
+          </li>
+        </ul>
+        <p class=" text-white w-100 moon-name" style="font-size:9rem; text-transform:uppercase"></p>
+        <p class="text-white w-100 fs-5 pb-3 moon-description"></p>
+        <div class="w-100 d-flex justify-content-between align-items-center pt-5 flex-wrap info"
+          style="border-top: 1px solid gray;">
+          <p>
+            <span class="text-white d-block fs-4">Avg. distance</span>
+            <span class="text-white d-block fs-2 moon-distance"></span>
+          </p>
+          <p>
+            <span class="text-white d-block fs-4">est.travel.time</span>
+            <span class="text-white d-block fs-2 moon-travel"></span>
+          </p>
+        </div>
+      </section>
+    </main>
+  </div>
+  <!-- End Main Content -->
+  <script src="js/main.js"></script>
+  <!-- bootstrap js cdn -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
