--- a/index.html
+++ b/index.html
@@ -1,100 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
     <link rel="stylesheet" href="css/style.css">
     <!-- bootstrap css cdn -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <!-- for font awsome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+        href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&amp;family=Bellefair&amp;family=Barlow:wght@400;700&amp;display=swap"
+        rel="stylesheet" />
+    <!-- Google Fonts --> <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&amp;family=Bellefair&amp;family=Barlow:wght@400;700&amp;display=swap"
+        rel="stylesheet" />
+    <!-- Google Fonts -->
     <title>Frontend Mentor | Space tourism website</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- Start Header Section -->
     <header>
-      <nav class="navbar navbar-expand-sm mt-4 ">
-        <div class="container-fluid d-flex justify-content-between align-items-center ps-5 pe-5">
-          <a class="navbar-brand" href="#">
-            <img src="./assets/shared/logo.svg" alt="loge">
-          </a>
-          <button
-            class="navbar-toggler bg-white"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarScroll"
-            aria-controls="navbarScroll"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon d-block"></span>
-          </button>
-          <div class="collapse navbar-collapse flex-grow-0 me-5 p-2 text-center position-relative mt-4 mt-md-0 mt-lg-0" id="navbarScroll">
-            <ul
-              class="navbar-nav me-auto my-2 my-lg-0 navbar-nav"
-              style="--bs-scroll-height: 100px"
-            >
-              <li class="nav-item text-capitalize">
-                <a class="nav-link active text-white" aria-current="page" href="#">00 Home</a>
-              </li>
-              <li class="nav-item text-capitalize">
-                <a class="nav-link text-white" href="#">01 Destination</a>
-              </li>
-              <li class="nav-item text-capitalize text-white">
-                <a class="nav-link text-white" href="#">02 Crew</a>
-              </li>
-              <li class="nav-item text-capitalize text-white">
-                <a class="nav-link text-white" href="#">03 technology</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        <nav class="navbar navbar-expand-sm mt-3">
+            <div class="container-fluid d-flex justify-content-between">
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/shared/logo.svg" alt="loge">
+                </a>
+                <button class="btn-menu navbar-toggler bg-white" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon d-block"></span>
+                </button>
+                <div class="offcanvas w-50 offcanvas-end d-flex justify-content-between align-items-end" tabindex="-1"
+                    id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header w-100">
+                        <button type="button" class="btn-close text-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="collapse navbar-collapse flex-grow-0  p-2 text-center position-relative"
+                        id="navbarScroll">
+                        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav" style="--bs-scroll-height: 400px">
+                            <li class="nav-item text-capitalize">
+                                <a class="nav-link active text-white" aria-current="page" href="index.html">00 Home</a>
+                            </li>
+                            <li class="nav-item text-capitalize">
+                                <a class="nav-link text-white" href="destination-moon.html">01 Destination</a>
+                            </li>
+                            <li class="nav-item text-capitalize text-white">
+                                <a class="nav-link text-white" href="crew-commander.html">02 Crew</a>
+                            </li>
+                            <li class="nav-item text-capitalize text-white">
+                                <a class="nav-link text-white" href="technology-capsule.html">03 technology</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+        </nav>
     </header>
     <!-- End Header Section -->
     <!-- Start Main Content -->
-     <div class="container position-absolute top-50 start-50 content">
-      <main class="row">
-      <section class="p-4 col-lg-6 col-md-7">
-        <p class="text-white text-uppercase fs-5 letter text-center m-0">
-          so, you want to travel to <span class="d-block">space</span>
-         <p class="text-white text-capitalize text-center letter-1">
-           let's face it; if you want to go to space, you might as well
-         genuinely go to outer space and not hover kind of on the edge of it.
-         well sit back, and relax because we'll give you a truly out of this world
-         experience!
-         </p>
-        </p>
-      </section>
-      <section class="p-4 explore text-center col-lg-3 col-md-4 d-flex justify-content-center align-items-center">
-        <div class="text-black text-uppercase d-flex justify-content-center align-items-center fs-1 ">
-          explore
-        </div>
-      </section>
-    </main>
-     </div>
+    <div class="container content">
+        <main class="row justify-content-center d-flex justify-content-center align-items-center flex-wrap gap-5">
+            <section class="p-4 space w-50 text-center text-lg-start">
+                <p class="text-white text-uppercase fs-5 letter m-0">
+                    so, you want to travel to <span class="d-block span-space">space</span>
+                <p class="text-white text-capitalize letter-1 fs-6">
+                    let's face it; if you want to go to space, you might as well
+                    genuinely go to outer space and not hover kind of on the edge of it.
+                    well sit back, and relax because we'll give you a truly out of this world
+                    experience!
+                </p>
+                </p>
+            </section>
+            <section class="explore text-center bg-white  d-flex justify-content-center align-items-center">
+                <div class="text-black text-uppercase fs-1 ">
+                    explore
+                </div>
+            </section>
+        </main>
+    </div>
     <!-- End Main Content -->
-    <footer></footer>
     <script src="js/main.js"></script>
     <!-- bootstrap js cdn -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
