--- a/destination-moon.html
+++ b/destination-moon.html
@@ -93,13 +93,13 @@
       </section>
       <section class="" style="width: 50%;">
         <ul class="d-flex justify-content-between align-items-center p-0 " style="width:75%; ">
-          <li><a style="text-decoration: none; text-transform:capitalize; " class="text-white fs-4 active">moon</a>
+          <li><a style="text-decoration: none; text-transform:capitalize; font-size:calc(1.275rem + .3vw); " class="text-white active">moon</a>
           </li>
-          <li><a style="text-decoration: none; text-transform:capitalize " class="text-white fs-4">mars</a>
+          <li><a style="text-decoration: none; text-transform:capitalize; font-size:calc(1.275rem + .3vw); " class="text-white">mars</a>
           </li>
-          <li><a style="text-decoration: none; text-transform:capitalize " class="text-white fs-4">europa</a>
+          <li><a style="text-decoration: none; text-transform:capitalize; font-size:calc(1.275rem + .3vw); " class="text-white">europa</a>
           </li>
-          <li><a style="text-decoration: none; text-transform:capitalize " class="text-white fs-4">titan</a>
+          <li><a style="text-decoration: none; text-transform:capitalize; font-size:calc(1.275rem + .3vw); " class="text-white">titan</a>
           </li>
         </ul>
         <p class=" text-white w-100 moon-name" style="font-size:9rem; text-transform:uppercase"></p>
